syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package sensu.types;

option go_package = "types";
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.testgen_all) = true;

// TLSOptions holds TLS options that are used across the varying Sensu
// components
message TLSOptions {
  string cert_file = 1;
  string key_file = 2;
  string trusted_ca_file = 3 [(gogoproto.customname) = "TrustedCAFile"];
  bool insecure_skip_verify = 4 [(gogoproto.jsontag) = "insecure_skip_verify"];
}
